Add ability to filter driver names
* For example, if you type "albert" into the text widget, only
  data related to albert will be spoken.
* Tried to use SharedPreferences, but they don't seem to stick
* Tested this live today. Works, but voice needs to be much louder.
  * With 11 cars in a session, app was under memory pressure.
  * Main issue now is the app stops reading as soon as phone goes into screen saver.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,4 +17,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-  </androidx.constraintlayout.widget.ConstraintLayout>
+    <MultiAutoCompleteTextView
+        android:id="@+id/driverNamesDropDown"
+        android:layout_width="386dp"
+        android:layout_height="130dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="128dp"
+        android:hint="Type the beginning of the name of a driver to follow"
+        android:text="Search driver names..."
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
