--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,23 +9,12 @@
 
     <TextView
         android:id="@+id/text_view"
-        android:layout_width="363dp"
-        android:layout_height="130dp"
+        android:layout_width="362dp"
+        android:layout_height="226dp"
         android:text="Hello World!"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
-
-    <MultiAutoCompleteTextView
-        android:id="@+id/driverNamesDropDown"
-        android:layout_width="325dp"
-        android:layout_height="8dp"
-        android:layout_marginTop="100dp"
-        android:hint="Type the beginning of the name of a driver to follow"
-        android:text="Search driver names..."
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/speakerSelector" />
 
     <Spinner
         android:id="@+id/speakerSelector"
@@ -56,12 +45,12 @@
         android:layout_width="320dp"
         android:layout_height="316dp"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="13dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
         app:layout_constraintBottom_toTopOf="@+id/text_view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/driverNamesDropDown"
+        app:layout_constraintTop_toBottomOf="@+id/speakerSelector"
         tools:listitem="@layout/recycler_view_item_1" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
