--- a/app/src/main/res/drawable/helmet_launcher_foreground.xml
+++ b/app/src/main/res/drawable/helmet_launcher_foreground.xml
@@ -4,10 +4,10 @@
     android:height="108dp"
     android:viewportWidth="124.27"
     android:viewportHeight="131.65">
-  <group android:scaleX="0.5380471"
-      android:scaleY="0.57"
-      android:translateX="28.703444"
-      android:translateY="28.30475">
+  <group android:scaleX="0.51916826"
+      android:scaleY="0.55"
+      android:translateX="29.87648"
+      android:translateY="29.62125">
     <path
         android:pathData="m66.07,7.62c-1.54,0.03 -3.06,0.12 -4.57,0.25 -12.39,1.12 -25.5,5.52 -34.61,13.99 -4.87,4.53 -9.07,14.63 -11.45,21.25l19.99,3.48 -0.85,30.49 -26.95,20.14c0,0.05 0,0.44 0,0.44 0,0 0.91,0.13 1.43,0.21 0.18,1.74 0.46,3.51 0.96,4.72 1.84,4.41 7.68,10.54 10,12.88 -0.04,0.01 -0.08,0.01 -0.13,0.02 0.97,0.99 1.64,1.62 1.64,1.62l0.59,0.57 0.84,-0.08c0,0 8.29,-0.71 18.48,-2.16 10.19,-1.45 22.25,-3.6 30.2,-6.59 15.65,-5.87 32.07,-10.04 41.26,-25.25 0.34,-0.57 0.53,-2.96 0.71,-3.48 -0.17,0.19 -0.33,0.38 -0.5,0.57 2.02,-6.57 3.54,-29.71 1.93,-37.8 -2.33,-11.71 -11.7,-22.07 -21.81,-28.42 -7.43,-4.66 -16.64,-6.74 -25.59,-6.84 -0.52,-0.01 -1.04,-0.01 -1.55,0z"
         android:strokeAlpha="0.5"
@@ -119,7 +119,7 @@
         android:strokeAlpha="0.7631579"
         android:strokeLineJoin="round"
         android:strokeWidth="1.441"
-        android:fillColor="#00000000"
+        android:fillColor="#f0ebde"
         android:strokeColor="#751b17"
         android:strokeLineCap="round"/>
     <path
@@ -127,59 +127,59 @@
         android:strokeAlpha="0.7631579"
         android:strokeLineJoin="round"
         android:strokeWidth="1.441"
-        android:fillColor="#00000000"
+        android:fillColor="#f0ebde"
         android:strokeColor="#751b17"
         android:strokeLineCap="round"/>
     <path
         android:pathData="m83.84,108.96c0,0 0,-6.68 -0.13,-9.44 -0.03,-0.56 0.42,-1.08 1.4,-1.09 7.71,-0.05 8.47,-0.01 24.15,-0.03 0.99,0.02 0.94,0.62 0.94,1.12l-0.01,9.15c0.03,0.65 -0.33,0.83 -0.82,0.86l-24.34,0.34c-1.23,0.02 -1.01,-0.55 -1.2,-0.92z"
         android:strokeAlpha="0.7631579"
         android:strokeWidth="1.441"
-        android:fillColor="#00000000"
+        android:fillColor="#f0ebde"
         android:strokeColor="#751b17"/>
     <path
         android:pathData="m92.63,109.62a2.43,3.13 96.79,0 1,1.26 -2.23,2.43 3.13,96.79 0,1 3.18,-0.08 2.43,3.13 96.79,0 1,1.78 2.16"
         android:strokeAlpha="0.7631579"
         android:strokeLineJoin="round"
         android:strokeWidth="1.41869998"
-        android:fillColor="#00000000"
+        android:fillColor="#302916"
         android:strokeColor="#751b17"
         android:strokeLineCap="round"/>
     <path
         android:pathData="m95.61,106.97 l8.72,-10.48c1.22,-1.1 0.77,-0.19 0.64,0.44l-6.57,11.37c-0.53,-0.68 -1.57,-1.21 -2.8,-1.34z"
         android:strokeAlpha="0.7631579"
         android:strokeWidth="0.97"
-        android:fillColor="#b3b3b3"
+        android:fillColor="#87723d"
         android:strokeColor="#751b17"
         android:fillType="evenOdd"/>
     <path
         android:pathData="M80.45,59.2 L96.68,32.01 97.2,36.2 118.61,5.69c0,0 -22.21,33.49 -22.41,33.56 -0.19,0.07 0.3,-3.62 -0.13,-3.54C95.65,35.78 80.6,59.08 80.45,59.2Z"
         android:strokeWidth="0.573"
+        android:fillColor="#5e4e2d"
         android:strokeColor="#a72727"
-        android:fillType="evenOdd">
-    </path>
+        android:fillType="evenOdd"/>
     <path
         android:pathData="m83.12,59.23 l23.64,-22.94 1.93,-0.41 -4.06,7.61 28.92,-23.48 0.2,0.59 -32.64,26.99 3.45,-6.19 -1.4,0.74z"
         android:strokeWidth="1"
+        android:fillColor="#5e4e2d"
         android:strokeColor="#a72727"
-        android:fillType="evenOdd">
-    </path>
+        android:fillType="evenOdd"/>
     <path
         android:pathData="m83.59,62.5 l34.71,-13.92 -9.59,8.65 35.86,-6.06 -0.28,1.16 -41.6,8.3 5.78,-5.61 0.06,-0.42z"
         android:strokeWidth="1.073"
+        android:fillColor="#5e4e2d"
         android:strokeColor="#a72727"
-        android:fillType="evenOdd">
-    </path>
+        android:fillType="evenOdd"/>
     <path
         android:pathData="m76.55,60.05 l-2.08,-25.36 4.42,4.59 0.93,-28.15 0.13,31.7 -3.12,-3.69z"
         android:strokeWidth="0.673"
+        android:fillColor="#594a2b"
         android:strokeColor="#a72727"
-        android:fillType="evenOdd">
-    </path>
+        android:fillType="evenOdd"/>
     <path
         android:pathData="m82.78,67.28 l24.82,3.07 -6.12,3.83 19.78,6.84 -0.63,0.57 -26.6,-7.77 6.34,-1.5z"
         android:strokeWidth="1.373"
+        android:fillColor="#5e4e2d"
         android:strokeColor="#a72727"
-        android:fillType="evenOdd">
-    </path>
+        android:fillType="evenOdd"/>
   </group>
 </vector>
