--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,4 +53,12 @@
         app:layout_constraintTop_toBottomOf="@+id/speakerSelector"
         tools:listitem="@layout/recycler_view_item_1" />
 
+    <Button
+        android:id="@+id/settingsButton"
+        android:layout_width="48dp"
+        android:layout_height="54dp"
+        android:text="⚙️"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
