--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -1,7 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<PreferenceScreen
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
+        <!--below line is to create preference category-->
+        <PreferenceCategory android:title="Drivers">
+
+                <MultiSelectListPreference
+                    android:key="drivers_key"
+                    android:dialogTitle="@string/drivers_title"
+                    android:summary="%s"
+                    android:title="@string/drivers_title"
+                    android:entries="@array/drivers_initial_entries"
+                    android:entryValues="@array/drivers_initial_values"/>
+
+        </PreferenceCategory>
         <!--below line is to create preference category-->
         <PreferenceCategory android:title="Radio">
 
