Add the list of drivers to Settings as well.
Generate a MultiSelectListPreference programmatically.

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -9,7 +9,7 @@
     <!--frame layout for displaying
         our preference fragment-->
     <FrameLayout
-        android:id="@+id/idFrameLayout"
+        android:id="@+id/settingsLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
