--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -5,7 +5,7 @@
         <!--below line is to create preference category-->
         <PreferenceCategory android:title="Drivers">
 
-                <MultiSelectListPreference
+                <cc.openlife.virtualvaltteri.DynamicMultiSelectListPreference
                     android:key="drivers_key"
                     android:dialogTitle="@string/drivers_title"
                     android:summary="%s"
