--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,16 +1,23 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.VirtualValtteri" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.VirtualValtteri" parent="Theme.MaterialComponents.DayNight.DarkActionBar.Bridge">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/black</item>
         <item name="colorPrimaryVariant">@color/black</item>
-        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorOnPrimary">#666666</item>
+        <item name="background">@color/black</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">#ff9a00</item>
         <item name="colorSecondaryVariant">#ffc861</item>
         <item name="colorOnSecondary">@color/material_dynamic_neutral20</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+        <item name="android:titleTextColor">?attr/colorSecondaryVariant</item>
         <!-- Customize your theme here. -->
+    </style>
+    <style name="Theme.AppCompat.Light.NoActionBar.FullScreen" parent="@style/Theme.AppCompat.Light.NoActionBar">
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowActionBar">false</item>
+        <item name="android:windowFullscreen">true</item>
     </style>
 </resources>
