Finally got the new Preference* widgets to work.
The idea is to populate one MultiSelect with the current drivers and cars,
and then maintain a second one where I dynamically put all drivers
you have once selected. But it was surprisingly difficult to
figure out basic stuff in Andriod. For examle, the just creating a class and
hoding a reference to it wouldn't work, because theembedded OS/Framework
manages each thread, and the instance I think I'm about to use,
may not exist anymore, or have been put to sleep, etc.

--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -11,7 +11,17 @@
                     android:summary=""
                     android:title="@string/drivers_title"
                     android:entries="@array/drivers_initial_entries"
-                    android:entryValues="@array/drivers_initial_values"/>
+                    android:entryValues="@array/drivers_initial_values"
+                    android:id="@+id/id_drivers_preference" />
+
+                <MultiSelectListPreference
+                    android:key="favorited_drivers_key"
+                    android:dialogTitle="Drivers you have followed previously, not in this session."
+                    android:summary=""
+                    android:title="Drivers you have followed previously, not in this session."
+                    android:entries="@array/drivers_initial_entries"
+                    android:entryValues="@array/drivers_initial_values"
+                    android:persistent="false"/>
 
         </PreferenceCategory>
         <!--below line is to create preference category-->
