--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -22,8 +22,8 @@
 
     <Button
         android:id="@+id/settingsButton"
-        android:layout_width="62dp"
-        android:layout_height="59dp"
+        android:layout_width="70dp"
+        android:layout_height="62dp"
         android:background="@color/black"
         android:text="⚙️"
         android:textColor="#55ffffff"
@@ -64,7 +64,7 @@
         android:id="@+id/idLargeText"
         android:layout_width="747dp"
         android:layout_height="388dp"
-        android:layout_marginTop="-100dp"
+        android:layout_marginTop="-35dp"
         android:layout_marginBottom="5dp"
         android:autoSizeTextType="none"
         android:background="@android:color/transparent"
@@ -73,7 +73,7 @@
         android:elevation="5dp"
         android:text="@string/largeTextDefault"
         android:textAlignment="textEnd"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textColor="@color/brightLargeText"
         android:textSize="256dp"
         android:textStyle="bold"
