--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -9,78 +9,137 @@
 
     <TextView
         android:id="@+id/text_view"
-        android:layout_width="528dp"
-        android:layout_height="118dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:background="@android:color/transparent"
         android:elevation="10dp"
-        android:text=""
+        android:text="Valtteri, it's James."
+        android:lines="3"
         android:textColor="#aa777777"
+        app:layout_constraintTop_toBottomOf="@id/idGuidelineBottom"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/idPosition" />
+        app:layout_constraintEnd_toStartOf="@id/settingsButton"
+        app:layout_constraintStart_toEndOf="@+id/idBarrierLeft1"
+        app:layout_constraintLeft_toRightOf="@+id/idBarrierLeft1"/>
 
     <Button
         android:id="@+id/settingsButton"
         android:layout_width="70dp"
         android:layout_height="62dp"
+        android:layout_marginBottom="8dp"
         android:background="@color/black"
         android:text="⚙️"
         android:textColor="#55ffffff"
         android:textSize="34sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintRight_toRightOf="parent" />
 
 
     <TextView
         android:id="@+id/idCarNr"
-        android:layout_width="163dp"
-        android:layout_height="83dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginBottom="-50sp"
         android:text="24"
         android:textColor="@color/brightLargeText"
-        android:textSize="48sp"
+        app:autoSizeTextType="uniform"
+        app:autoSizeMinTextSize="72sp"
+        app:autoSizeMaxTextSize="512sp"
+        app:autoSizeStepGranularity="1sp"
+        android:lines="1"
         android:textStyle="bold"
+        app:layout_constraintEnd_toStartOf="@id/idGuidelineLeft"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/idGuidelineTop"/>
 
     <TextView
         android:id="@+id/idPosition"
-        android:layout_width="173dp"
-        android:layout_height="100dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginStart="8dp"
         android:layout_marginBottom="8dp"
+        android:layout_marginTop="-50sp"
+        app:autoSizeTextType="uniform"
+        app:autoSizeMinTextSize="72sp"
+        app:autoSizeMaxTextSize="512sp"
+        app:autoSizeStepGranularity="1sp"
+        android:lines="1"
+
+
+
         android:background="@android:color/transparent"
-        android:text="P1"
+        android:text="P9"
         android:textAlignment="textStart"
         android:textColor="@color/brightLargeText"
-        android:textSize="72sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/idGuidelineLeft"
+        app:layout_constraintTop_toBottomOf="@id/idGuidelineBottom" />
 
     <TextView
         android:id="@+id/idLargeText"
-        android:layout_width="747dp"
-        android:layout_height="388dp"
-        android:layout_marginTop="-35dp"
-        android:layout_marginBottom="5dp"
-        android:autoSizeTextType="none"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="-50dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginBottom="-50dp"
+        app:autoSizeTextType="uniform"
+        app:autoSizeMinTextSize="192sp"
+        app:autoSizeMaxTextSize="2048sp"
+        app:autoSizeStepGranularity="1sp"
+        android:lines="1"
         android:background="@android:color/transparent"
         android:bufferType="normal"
-        android:elegantTextHeight="true"
         android:elevation="5dp"
         android:text="@string/largeTextDefault"
         android:textAlignment="textEnd"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textColor="@color/brightLargeText"
-        android:textSize="256dp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/text_view"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.060000002" />
+        app:layout_constraintStart_toEndOf="@id/idBarrierLeft1"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.constraintlayout.widget.Barrier
+        android:id="@+id/idBarrierLeft1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:foreground="#eeeeee"
+        app:layout_constraintLeft_toRightOf="@id/idCarNr"
+        app:barrierDirection="end"
+        app:constraint_referenced_ids="idCarNr,idPosition"
+        tools:layout_editor_absoluteX="288dp"
+        tools:layout_editor_absoluteY="192dp" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/idGuidelineBottom"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.85" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/idGuidelineLeft"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.15" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/idGuidelineTop"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.15" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
