Fiddle with the small gray text

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="SmallTransparentText">#77777777</color>
     <color name="brightLargeText">#ffee00</color>
     <color name="brightLargeTextSub">#dd9900</color>
     <color name="timeNormal">@color/brightLargeText</color>
