--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -19,7 +19,7 @@
         android:gravity="bottom"
         android:lines="4"
         android:text="Valtteri, it's James."
-        android:textColor="#aa777777"
+        android:textColor="@color/SmallTransparentText"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/idGuidelineRight"
         app:layout_constraintHorizontal_bias="0.0"
