--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -29,8 +29,9 @@
         android:id="@+id/settingsButton"
         android:layout_width="70dp"
         android:layout_height="62dp"
-        android:layout_marginBottom="8dp"
-        android:background="@color/black"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="16dp"
+        android:background="#00000000"
         android:text="⚙️"
         android:textColor="#55ffffff"
         android:textSize="34sp"
@@ -147,5 +148,24 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.95" />
+
+    <TextView
+        android:id="@+id/idTextHint"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:shadowColor="#FF333333"
+        android:shadowDx="8"
+        android:shadowDy="8"
+        android:shadowRadius="8"
+        android:textAllCaps="true"
+        android:elevation="20dp"
+        android:lines="1"
+        android:text="@string/initialHint"
+        android:textAlignment="textEnd"
+        android:textColor="#FFFFFFFF"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/settingsButton" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
