Create a universe of classes as a facade to android.hardware.sensors.*
For whatever reason Android doesn't let me subclass e.g. Sensor class. So
if I want to create composite sensors (which I did) and mix in built in
sensors, I need to re-create wrapper classes fort the latter so that they
can be part of the same polymorphism. Quite a heavy lift and in hindsight probably
not worth it. The main Collect class is now cleaner, but the cost is 100s of lines
across a hierarchy of 10 files.

Some of these files btw aren't even used, or don't even work. I'm just too afraid to delete
any, so committing everything now, will delete in a separate commit.

No new functionality, just refactoring that hopefully creates space for a couple
more custom or composite sensors. See also RaceEvent which allows to treat race start,
finish, and lap times as same events as we get from the sensors. Everything in one
humongous CSV file.

The real gold nugget is a copy of this composite sensor project:
https://plaw.info/articles/sensorfusion/

I can get very nice 3D rotation coordinates, in earth reference frame, out of it!
Now what remains is to learn to rotate acceleration with the same rotation matrix.
Oh, I bet I can now easily create a software sensor that emits the rotation matrix
as a RotationQuaternionEvent or something.

Oh, purchased a domain and moved .java files into com.virtualvaltteri.* namespace.

--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black"
-    tools:context=".MainActivity">
+    tools:context="com.virtualvaltteri.MainActivity">
 
     <TextView
         android:id="@+id/text_view"
@@ -168,5 +168,15 @@
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/settingsButton" />
+
+    <Button
+        android:id="@+id/tempSensorButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="startStopCollector"
+        android:background="#FFFF0000"
+        android:text="Button"
+        tools:layout_editor_absoluteX="26dp"
+        tools:layout_editor_absoluteY="224dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
