Maybe should have set a default value on the text field...

--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -24,6 +24,7 @@
                 android:id="@+id/id_writein_driver_name"
                 android:dialogMessage="Name of the driver as it appears in the live results."
                 app:useSimpleSummaryProvider="true"
+                android:defaultValue=""
                 android:persistent="true"/>
 
                 <SwitchPreference
