--- a/app/src/main/res/drawable/helmet_launcher_foreground.xml
+++ b/app/src/main/res/drawable/helmet_launcher_foreground.xml
@@ -9,25 +9,8 @@
       android:translateX="29.87648"
       android:translateY="29.62125">
     <path
-        android:pathData="m66.07,7.62c-1.54,0.03 -3.06,0.12 -4.57,0.25 -12.39,1.12 -25.5,5.52 -34.61,13.99 -4.87,4.53 -9.07,14.63 -11.45,21.25l19.99,3.48 -0.85,30.49 -26.95,20.14c0,0.05 0,0.44 0,0.44 0,0 0.91,0.13 1.43,0.21 0.18,1.74 0.46,3.51 0.96,4.72 1.84,4.41 7.68,10.54 10,12.88 -0.04,0.01 -0.08,0.01 -0.13,0.02 0.97,0.99 1.64,1.62 1.64,1.62l0.59,0.57 0.84,-0.08c0,0 8.29,-0.71 18.48,-2.16 10.19,-1.45 22.25,-3.6 30.2,-6.59 15.65,-5.87 32.07,-10.04 41.26,-25.25 0.34,-0.57 0.53,-2.96 0.71,-3.48 -0.17,0.19 -0.33,0.38 -0.5,0.57 2.02,-6.57 3.54,-29.71 1.93,-37.8 -2.33,-11.71 -11.7,-22.07 -21.81,-28.42 -7.43,-4.66 -16.64,-6.74 -25.59,-6.84 -0.52,-0.01 -1.04,-0.01 -1.55,0z"
-        android:strokeAlpha="0.5"
-        android:fillColor="#000000"
-        android:fillAlpha="0.5"/>
-    <path
-        android:pathData="m8.8,94.47c0,0 1.62,-7.05 3.71,-9.88 3.61,-4.88 14.41,-11.12 14.41,-11.12l3.71,-20.99 37.89,7.4 -7.41,36.24 -39.95,5.77z">
-      <aapt:attr name="android:fillColor">
-        <gradient 
-            android:centerX="60.21"
-            android:centerY="85.86"
-            android:gradientRadius="29.86"
-            android:type="radial">
-          <item android:offset="0" android:color="#FF1A1A1A"/>
-          <item android:offset="1" android:color="#FF333333"/>
-        </gradient>
-      </aapt:attr>
-    </path>
-    <path
-        android:pathData="m21.16,116.59c0,0 32.91,-2.92 48.18,-8.65 15.74,-5.91 34.55,-11.55 43.24,-25.95 2.26,-3.75 4.22,-30.33 2.47,-39.12 -2.33,-11.71 -11.71,-22.07 -21.83,-28.42 -9.14,-5.74 -20.96,-7.56 -31.71,-6.59 -12.39,1.12 -25.48,5.53 -34.59,14 -7.51,6.98 -13.59,27.59 -13.59,27.59 0,0 13.44,3.89 20.18,5.77 8.63,2.4 19.7,0.58 25.95,7 2.86,2.93 3.43,7.88 2.88,11.94 -0.61,4.51 -3.12,9 -6.59,11.94 -5.33,4.52 -12.93,5.53 -19.77,7 -8.08,1.74 -24.71,2.06 -24.71,2.06l-2.47,-2.88c0,0 -0.1,7.11 1.24,10.3 2.3,5.5 11.12,14 11.12,14z">
+        android:pathData="m21.16,116.59c0,0 32.91,-2.92 48.18,-8.65 15.74,-5.91 34.55,-11.55 43.24,-25.95 2.26,-3.75 4.22,-30.33 2.47,-39.12 -2.33,-11.71 -11.71,-22.07 -21.83,-28.42 -9.14,-5.74 -20.96,-7.56 -31.71,-6.59 -12.39,1.12 -25.48,5.53 -34.59,14 -7.51,6.98 -13.59,27.59 -13.59,27.59 0,0 13.44,3.89 20.18,5.77 8.63,2.4 19.7,0.58 25.95,7 2.86,2.93 3.43,7.88 2.88,11.94 -0.61,4.51 -3.12,9 -6.59,11.94 -5.33,4.52 -12.93,5.53 -19.77,7 -8.08,1.74 -24.71,2.06 -24.71,2.06l-2.47,-2.88c0,0 -0.1,7.11 1.24,10.3 2.3,5.5 11.12,14 11.12,14z"
+        android:strokeWidth="0.67119002">
       <aapt:attr name="android:fillColor">
         <gradient 
             android:centerX="77.42"
@@ -40,63 +23,23 @@
       </aapt:attr>
     </path>
     <path
-        android:pathData="m113.62,80.1c-12,13.36 -28.85,19.89 -43.28,25.28 -17.03,4.73 -34.51,7.66 -50.43,10.1 0.97,0.99 1.62,1.62 1.62,1.62l0.61,0.58 0.84,-0.09c0,0 8.28,-0.71 18.46,-2.16 10.19,-1.45 22.25,-3.59 30.21,-6.58 15.65,-5.87 32.07,-10.04 41.26,-25.26 0.34,-0.57 0.54,-2.96 0.72,-3.48z">
-      <aapt:attr name="android:fillColor">
-        <gradient 
-            android:centerX="74.33"
-            android:centerY="107.05"
-            android:gradientRadius="46.85"
-            android:type="radial">
-          <item android:offset="0" android:color="#FF4D4D4D"/>
-          <item android:offset="1" android:color="#FF000000"/>
-        </gradient>
-      </aapt:attr>
-    </path>
-    <path
-        android:pathData="m13.06,48.56c-0.06,0.2 -0.17,0.52 -0.17,0.52l-0.52,1.76 1.79,0.52c0,0 13.43,3.89 20.19,5.77 4.63,1.29 9.62,1.42 14.11,2.05 4.49,0.63 8.34,1.72 11.02,4.47 2.22,2.28 2.86,6.72 2.37,10.41 -0.54,4 -2.85,8.16 -5.94,10.79 -4.77,4.05 -12.04,5.09 -18.98,6.58 -7.28,1.56 -25.91,1.52 -27.3,1.55 -1.3,-1.9 -0.75,3.28 -0.64,3.98 2.21,-0.04 20.83,-0.21 28.72,-1.9 6.73,-1.45 14.71,-2.42 20.6,-7.41 3.84,-3.26 6.54,-8.08 7.21,-13.1 0.59,-4.42 0.09,-9.88 -3.4,-13.47 -3.57,-3.66 -8.36,-4.9 -13.13,-5.57 -12.31,-1.17 -25.22,-4.46 -35.92,-6.95z">
-      <aapt:attr name="android:fillColor">
-        <gradient 
-            android:startX="45.45"
-            android:startY="80.32"
-            android:endX="57.55"
-            android:endY="72.75"
-            android:type="linear">
-          <item android:offset="0" android:color="#FF000000"/>
-          <item android:offset="1" android:color="#FF4D4D4D"/>
-        </gradient>
-      </aapt:attr>
-    </path>
-    <path
-        android:pathData="m12.73,46.68c0,0 14.52,4.49 21.99,5.82 8.16,1.45 16.49,2.93 24.75,2.33 7.37,-0.53 15.51,-4.03 21.55,-5.24 1.28,-0.26 3.49,1.75 3.49,1.75l-1.75,29.7c0,0 -16.86,7.59 -25.63,10.48 -8.18,2.71 -16.51,5.18 -25.04,6.41 -5.58,0.8 -11.26,0.81 -16.89,0.58 -2.54,-0.1 -7.57,-0.87 -7.57,-0.87 0,0 -0.25,-18.49 0.73,-27.66 0.83,-7.86 4.37,-23.3 4.37,-23.3z"
+        android:pathData="m13.76,46.22c0,0 14.52,4.49 21.99,5.82 8.16,1.45 16.49,2.93 24.75,2.33 7.37,-0.53 15.51,-4.03 21.55,-5.24 1.28,-0.26 3.49,1.75 3.49,1.75l-1.75,29.7c0,0 -16.86,7.59 -25.63,10.48 -8.18,2.71 -16.51,5.18 -25.04,6.41 -5.58,0.8 -11.26,0.81 -16.89,0.58 -2.54,-0.1 -7.57,-0.87 -7.57,-0.87 0,0 -0.25,-18.49 0.73,-27.66 0.83,-7.86 4.37,-23.3 4.37,-23.3z"
         android:strokeAlpha="0.4"
-        android:strokeWidth="0.92"
+        android:strokeWidth="0.92322183"
         android:strokeColor="#ffffff"
         android:fillAlpha="0.4">
       <aapt:attr name="android:fillColor">
         <gradient 
-            android:startX="7.58"
-            android:startY="72.67"
-            android:endX="84.49"
-            android:endY="72.67"
+            android:startX="8.61"
+            android:startY="72.21"
+            android:endX="85.52"
+            android:endY="72.21"
             android:type="linear">
           <item android:offset="0" android:color="#FF999999"/>
           <item android:offset="0.14" android:color="#FFD0D0D0"/>
           <item android:offset="0.25" android:color="#FFFFFFFF"/>
           <item android:offset="0.4" android:color="#7FFFFFFF"/>
           <item android:offset="1" android:color="#FFFFFFFF"/>
-        </gradient>
-      </aapt:attr>
-    </path>
-    <path
-        android:pathData="M79.05,55.85m-2.68,0a2.68,2.68 0,1 1,5.35 0a2.68,2.68 0,1 1,-5.35 0">
-      <aapt:attr name="android:fillColor">
-        <gradient 
-            android:centerX="79.05"
-            android:centerY="55.84"
-            android:gradientRadius="2.68"
-            android:type="radial">
-          <item android:offset="0" android:color="#FFFFFFFF"/>
-          <item android:offset="1" android:color="#FFCCCCCC"/>
         </gradient>
       </aapt:attr>
     </path>
@@ -115,71 +58,40 @@
       </aapt:attr>
     </path>
     <path
-        android:pathData="m76.82,90.75c0,0 40.78,0.12 41.47,0.04 1.13,-0.14 2.31,0.8 2.25,2.1l-0.1,17.31c-0.51,1.28 -1.47,1.35 -2.24,1.39l-41.3,0.92c-1.45,-0.03 -1.71,-2.1 -1.77,-2.9L74.95,92.91c-0.08,-1.65 0.86,-2.04 1.87,-2.16z"
-        android:strokeAlpha="0.7631579"
+        android:pathData="m76.86,90.79c0,0 40.7,0.13 41.4,0.04 1.13,-0.15 2.3,0.9 2.25,2.35l-0.1,19.38c-0.51,1.43 -1.47,1.51 -2.24,1.56l-41.23,1.03c-1.44,-0.04 -1.71,-2.35 -1.77,-3.25L74.99,93.2c-0.08,-1.85 0.86,-2.29 1.86,-2.41z"
         android:strokeLineJoin="round"
-        android:strokeWidth="1.441"
-        android:fillColor="#f0ebde"
-        android:strokeColor="#751b17"
+        android:strokeWidth="1.52306497"
+        android:fillColor="#cacaca"
+        android:strokeColor="#7e7e7e"
+        android:fillAlpha="0.3848684"
         android:strokeLineCap="round"/>
     <path
         android:pathData="m78.86,110.7c0,0 -0,-10.26 -0.18,-14.49 -0.04,-0.86 0.57,-1.66 1.91,-1.68 10.53,-0.14 11.56,-0.08 32.96,-0.23 1.36,0.03 1.29,0.94 1.29,1.72l-0.02,14.04c0.04,1.01 -0.45,1.28 -1.12,1.32l-33.21,0.72c-1.67,0.04 -1.38,-0.83 -1.63,-1.39z"
-        android:strokeAlpha="0.7631579"
         android:strokeLineJoin="round"
-        android:strokeWidth="1.441"
-        android:fillColor="#f0ebde"
-        android:strokeColor="#751b17"
+        android:strokeWidth="1.44099998"
+        android:fillColor="#cacaca"
+        android:strokeColor="#7e7e7e"
+        android:fillAlpha="0.4"
         android:strokeLineCap="round"/>
     <path
         android:pathData="m83.84,108.96c0,0 0,-6.68 -0.13,-9.44 -0.03,-0.56 0.42,-1.08 1.4,-1.09 7.71,-0.05 8.47,-0.01 24.15,-0.03 0.99,0.02 0.94,0.62 0.94,1.12l-0.01,9.15c0.03,0.65 -0.33,0.83 -0.82,0.86l-24.34,0.34c-1.23,0.02 -1.01,-0.55 -1.2,-0.92z"
-        android:strokeAlpha="0.7631579"
-        android:strokeWidth="1.441"
-        android:fillColor="#f0ebde"
-        android:strokeColor="#751b17"/>
+        android:strokeWidth="1.44099998"
+        android:fillColor="#cbcbcb"
+        android:strokeColor="#7e7e7e"
+        android:fillAlpha="0.6392157"/>
     <path
         android:pathData="m92.63,109.62a2.43,3.13 96.79,0 1,1.26 -2.23,2.43 3.13,96.79 0,1 3.18,-0.08 2.43,3.13 96.79,0 1,1.78 2.16"
-        android:strokeAlpha="0.7631579"
         android:strokeLineJoin="round"
         android:strokeWidth="1.41869998"
-        android:fillColor="#302916"
-        android:strokeColor="#751b17"
+        android:fillColor="#afafaf"
+        android:strokeColor="#7e7e7e"
+        android:fillAlpha="0.4"
         android:strokeLineCap="round"/>
     <path
         android:pathData="m95.61,106.97 l8.72,-10.48c1.22,-1.1 0.77,-0.19 0.64,0.44l-6.57,11.37c-0.53,-0.68 -1.57,-1.21 -2.8,-1.34z"
-        android:strokeAlpha="0.7631579"
-        android:strokeWidth="0.97"
-        android:fillColor="#87723d"
-        android:strokeColor="#751b17"
-        android:fillType="evenOdd"/>
-    <path
-        android:pathData="M80.45,59.2 L96.68,32.01 97.2,36.2 118.61,5.69c0,0 -22.21,33.49 -22.41,33.56 -0.19,0.07 0.3,-3.62 -0.13,-3.54C95.65,35.78 80.6,59.08 80.45,59.2Z"
-        android:strokeWidth="0.573"
-        android:fillColor="#5e4e2d"
-        android:strokeColor="#a72727"
-        android:fillType="evenOdd"/>
-    <path
-        android:pathData="m83.12,59.23 l23.64,-22.94 1.93,-0.41 -4.06,7.61 28.92,-23.48 0.2,0.59 -32.64,26.99 3.45,-6.19 -1.4,0.74z"
-        android:strokeWidth="1"
-        android:fillColor="#5e4e2d"
-        android:strokeColor="#a72727"
-        android:fillType="evenOdd"/>
-    <path
-        android:pathData="m83.59,62.5 l34.71,-13.92 -9.59,8.65 35.86,-6.06 -0.28,1.16 -41.6,8.3 5.78,-5.61 0.06,-0.42z"
-        android:strokeWidth="1.073"
-        android:fillColor="#5e4e2d"
-        android:strokeColor="#a72727"
-        android:fillType="evenOdd"/>
-    <path
-        android:pathData="m76.55,60.05 l-2.08,-25.36 4.42,4.59 0.93,-28.15 0.13,31.7 -3.12,-3.69z"
-        android:strokeWidth="0.673"
-        android:fillColor="#594a2b"
-        android:strokeColor="#a72727"
-        android:fillType="evenOdd"/>
-    <path
-        android:pathData="m82.78,67.28 l24.82,3.07 -6.12,3.83 19.78,6.84 -0.63,0.57 -26.6,-7.77 6.34,-1.5z"
-        android:strokeWidth="1.373"
-        android:fillColor="#5e4e2d"
-        android:strokeColor="#a72727"
+        android:strokeWidth="0.97000003"
+        android:fillColor="#bf7600"
+        android:strokeColor="#7e7e7e"
         android:fillType="evenOdd"/>
   </group>
 </vector>
