Add a "shadow" layer that shows the pprevious time and position.
This could be useful if you want to track 2 drivers simultaneously,
or not.

--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -38,14 +38,40 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
 
+    <TextView
+        android:id="@+id/idCarNr2"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="-16dp"
+        android:layout_marginBottom="-110sp"
+        android:layout_marginEnd="-32dp"
+        android:gravity="top"
+        android:lines="1"
+        android:text="@string/carNrDefault"
+        android:textColor="@android:color/transparent"
+        android:shadowColor="@color/brightLargeText2"
+        android:shadowDx="8"
+        android:shadowDy="-8"
+        android:shadowRadius="16"
+        android:textStyle="bold"
+        app:autoSizeMaxTextSize="512sp"
+        app:autoSizeMinTextSize="72sp"
+        app:autoSizeStepGranularity="1sp"
+        app:autoSizeTextType="uniform"
+        app:layout_constraintBottom_toTopOf="@id/idGuidelineTop"
+        app:layout_constraintEnd_toStartOf="@id/idGuidelineLeft"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.18" />
 
     <TextView
         android:id="@+id/idCarNr"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="-110sp"
+        android:layout_marginTop="32dp"
+        android:layout_marginBottom="-174sp"
         android:gravity="top"
         android:lines="1"
         android:text="@string/carNrDefault"
@@ -60,6 +86,36 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.18" />
+
+
+    <TextView
+        android:id="@+id/idPosition2"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="-160sp"
+        android:layout_marginBottom="64dp"
+        android:layout_marginEnd="-32dp"
+        android:background="@android:color/transparent"
+        android:gravity="bottom"
+        android:lines="1"
+        android:text="@string/positionDefault"
+        android:textAlignment="textStart"
+        android:textColor="@android:color/transparent"
+        android:shadowColor="@color/brightLargeText2"
+        android:shadowDx="8"
+        android:shadowDy="-8"
+        android:shadowRadius="20"
+
+        android:textStyle="bold"
+        app:autoSizeMaxTextSize="512sp"
+        app:autoSizeMinTextSize="72sp"
+        app:autoSizeStepGranularity="1sp"
+        app:autoSizeTextType="uniform"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/idGuidelineLeft"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/idGuidelineBottom" />
 
     <TextView
         android:id="@+id/idPosition"
@@ -86,6 +142,37 @@
         app:layout_constraintTop_toBottomOf="@id/idGuidelineBottom" />
 
     <TextView
+        android:id="@+id/idLargeText2"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="-200dp"
+        android:layout_marginEnd="-50dp"
+        android:layout_marginBottom="50dp"
+        android:background="@android:color/transparent"
+        android:bufferType="normal"
+        android:elevation="5dp"
+        android:lines="1"
+        android:text="@string/largeTextDefault"
+        android:textAlignment="center"
+        android:gravity="center"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textColor="@android:color/transparent"
+        android:shadowColor="@color/brightLargeText2"
+        android:shadowDx="-30"
+        android:shadowDy="-30"
+        android:shadowRadius="60"
+        android:textStyle="bold"
+        app:autoSizeMaxTextSize="2048sp"
+        app:autoSizeMinTextSize="192sp"
+        app:autoSizeStepGranularity="1sp"
+        app:autoSizeTextType="uniform"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/idBarrierLeft"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
         android:id="@+id/idLargeText"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -98,7 +185,7 @@
         android:elevation="5dp"
         android:lines="1"
         android:text="@string/largeTextDefault"
-        android:textAlignment="textEnd"
+        android:textAlignment="center"
         android:gravity="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textColor="@color/brightLargeText"
