--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="SmallTransparentText">#77777777</color>
-    <color name="brightLargeText">#ffee00</color>
+    <color name="brightLargeText">#eeffee00</color>
+    <color name="brightLargeText2">#66bbbbbb</color>
     <color name="brightLargeTextSub">#dd9900</color>
     <color name="timeNormal">@color/brightLargeText</color>
     <color name="timeImproved">#FF00FF00</color>
