Add option to close the app and service
Once again thanks android for providing 5 different ways to finish()
and exit an app... what a waste of time this was.

--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -76,4 +76,15 @@
 
         </PreferenceCategory>
 
+        <PreferenceCategory android:title="System">
+                <ListPreference
+                    android:defaultValue="on"
+                    android:dialogTitle="Close VirtualValtteri"
+                    android:entries="@array/system_close_key_choices"
+                    android:entryValues="@array/system_close_key_choices"
+                    android:key="system_close_key"
+                    android:title="Close VirtualValtteri"
+                    />
+        </PreferenceCategory>
+
 </PreferenceScreen>
